# vibe-voice

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  gen_icons.py  main.py  package.json  pnpm-lock.yaml  requirements.txt  run.sh  ydotool-setup.sh
.github/workflows/: release.yml
.opencode/agents/: cicd.md  dev.md
app/: __init__.py  paster.py  recorder.py  transcriber.py  window.py
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
