[package]
name = "vibe-voice"
version = "0.1.2"
edition = "2021"

[lib]
name = "vibe_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon", "devtools"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["multipart", "json"] }
tokio       = { version = "1", features = ["full"] }
dotenvy     = "0.15"
evdev       = "0.12"
png         = "0.17"
libc        = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
